unpackaged/main/default/objects/RCC_Condition__c/RCC_Condition__c.object-meta.xml
<CustomObject>
    <label>RCC Condition</label>
    <nameField>
        <displayFormat>RCCC-{00000}</displayFormat>
        <label>RCC Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RCC Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>