unpackaged/main/default/objects/RCC_Condition__c/fields/Account_Aston_Amount__c.field-meta.xml
<CustomField>
    <fullName>Account_Aston_Amount__c</fullName>
    <label>Account Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>