unpackaged/main/default/objects/RCC_Condition__c/fields/Account_Aston_Delay__c.field-meta.xml
<CustomField>
    <fullName>Account_Aston_Delay__c</fullName>
    <label>Account Delay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aston_Delay_Steps</valueSetName>
    </valueSet>
</CustomField>