unpackaged/main/default/objects/RCC_Condition__c/fields/Account_Nature__c.field-meta.xml
<CustomField>
    <fullName>Account_Nature__c</fullName>
    <label>Account Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Nature</valueSetName>
    </valueSet>
</CustomField>