unpackaged/main/default/objects/RCC_Condition__c/fields/Account_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Risk_Level__c</fullName>
    <label>Account Risk Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>