unpackaged/main/default/objects/RCC_Condition__c/fields/GearsetExternalId__c.field-meta.xml
<CustomField>
    <fullName>GearsetExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Gearset External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>