unpackaged/main/default/objects/RCC_Condition__c/fields/One_Time_Total__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Total__c</fullName>
    <label>One Time Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>