unpackaged/main/default/objects/RCC_Condition__c/fields/RCC_Workflow_Level__c.field-meta.xml
<CustomField>
    <fullName>RCC_Workflow_Level__c</fullName>
    <label>RCC Workflow Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RCC_Workflow_Level</valueSetName>
    </valueSet>
</CustomField>