unpackaged/main/default/objects/RCC_Condition__c/fields/Recurring_Total_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Total_Monthly__c</fullName>
    <label>Recurring Total Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>