unpackaged/main/default/objects/RCC_Condition__c/fields/Tech_True__c.field-meta.xml
<CustomField>
    <fullName>Tech_True__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech True</label>
    <type>Checkbox</type>
</CustomField>